[gd_scene load_steps=7 format=2]

[ext_resource path="res://Textures/Bosses/Eye/Boss_Eye.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bosses/Eye/Boss_Eye.gd" type="Script" id=2]
[ext_resource path="res://Textures/Bosses/Eye/effect.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Attack_1"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy_Eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Enemy_Eye/effect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.95, 1.5 ),
"transitions": PoolRealArray( 0.37, 1.23, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 2.7, 2.7 ), Vector2( 1.8, 1.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Enemy_Eye/effect:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Enemy_Eye/effect:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.25, 0.55, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.686275, 0, 0, 1 ), Color( 0.686275, 0, 0, 0.784314 ), Color( 0.686275, 0, 0, 0.784314 ), Color( 0.32549, 0.0784314, 0.0784314, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Enemy_Eye/effect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy_Eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy_Eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Boss_Eye" type="Node2D"]
position = Vector2( 508, 314 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Bullet_points" type="Node2D" parent="."]
position = Vector2( 7, -6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Position0" type="Position2D" parent="Bullet_points"]
position = Vector2( 0, -140 )

[node name="Position1" type="Position2D" parent="Bullet_points"]
position = Vector2( 110, -110 )

[node name="Position2" type="Position2D" parent="Bullet_points"]
position = Vector2( 140, 0 )

[node name="Position3" type="Position2D" parent="Bullet_points"]
position = Vector2( 110, 110 )

[node name="Position4" type="Position2D" parent="Bullet_points"]
position = Vector2( 0, 140 )

[node name="Position5" type="Position2D" parent="Bullet_points"]
position = Vector2( -110, 110 )

[node name="Position6" type="Position2D" parent="Bullet_points"]
position = Vector2( -140, 0 )

[node name="Position7" type="Position2D" parent="Bullet_points"]
position = Vector2( -110, -110 )

[node name="BodyAnim" type="AnimationPlayer" parent="."]
anims/Attack_1 = SubResource( 1 )
anims/Laser_attac = SubResource( 3 )
anims/Stay = SubResource( 4 )

[node name="Enemy_Eye" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 7

[node name="effect" type="Sprite" parent="Enemy_Eye"]
visible = false
self_modulate = Color( 0.686275, 0, 0, 1 )
position = Vector2( 2.25, -19.25 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
hframes = 8

[node name="BulAtacTime" type="Timer" parent="."]
wait_time = 2.0

[node name="TentAtacTime" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="animation_finished" from="BodyAnim" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BulAtacTime" to="." method="Attack_Bullet"]
[connection signal="timeout" from="TentAtacTime" to="." method="Attac_Tentacle"]
